--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ charset-normalizer==3.1.0 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 greenlet==2.0.2 ; python_version >= "3.11" and platform_machine == "aarch64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "ppc64le" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "x86_64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "amd64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "AMD64" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "win32" and python_version < "4.0" or python_version >= "3.11" and platform_machine == "WIN32" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
+jdatetime==4.1.1 ; python_version >= "3.11" and python_version < "4.0"
 numpy==1.25.0 ; python_version >= "3.11" and python_version < "4.0"
 pandas==2.0.3 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
 pytz==2023.3 ; python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
+schedule==1.2.0 ; python_version >= "3.11" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 soupsieve==2.4.1 ; python_version >= "3.11" and python_version < "4.0"
 sqlalchemy==2.0.17 ; python_version >= "3.11" and python_version < "4.0"
